course-03/exercises/udacity-c3-deployment/k8s/backend-feed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: backend-feed
  name: backend-feed
spec:
  replicas: 3
  selector:
    matchLabels:
      service: backend-feed
  template:
    metadata:
      labels:
        service: backend-feed
    spec:
      containers:
      - image: reismatheus97/backend-feed
        name: backend-feed
        imagePullPolicy: Always  
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        volumeMounts:
        - name: aws-secret
          mountPath: "/root/.aws/"
          readOnly: true
        restartPolicy: Always

      volumes:
      - name: aws-secret
        secret:
          secretName: aws-secret
